# texlive

source.development/: BuildMe  LOG  configure  configure.in
source.development/TeX/: configure  configure.in
source.development/TeX/config/: mkinstalldirs
source.development/TeX/libs/: win32.mak
source.development/TeX/libs/curl/: Makefile  Makefile.am  Makefile.dist  Makefile.in  configure.in  curl-config.in  mkinstalldirs  reconf  win32.mak
source.development/TeX/libs/curl/docs/examples/: Makefile.am  Makefile.example  Makefile.in  curlgtk.c  ftpget.c  ftpgetresp.c  ftpupload.c  getinmemory.c  http-post.c  httpput.c  multithread.c  persistant.c  postit2.c  sepheaders.c  simple.c  simplessl.c
source.development/TeX/libs/freetype/: mkinstalldirs  win32.mak
source.development/TeX/libs/jpeg/: win32.mak
source.development/TeX/libs/libgnuw32/: win32.mak
source.development/TeX/libs/libgsw32/: ghostscr.c-orig  gvwgsver-orig.cpp  win32.mak
source.development/TeX/libs/libwww/: HTAABrow.c  HTAABrow.h  HTAAUtil.c  HTAAUtil.h  HTANSI.c  HTAccess.c  HTAccess.h  HTAlert.c  HTAlert.h  HTAncMan.h  HTAnchor.c  HTAnchor.h  HTArray.c  HTArray.h  HTAssoc.c  HTAssoc.h  HTAtom.c  HTAtom.h  HTBInit.c  HTBInit.h  HTBTree.c  HTBTree.h  HTBind.c  HTBind.h  HTBound.c  HTBound.h  HTBufWrt.c  HTBufWrt.h  HTCache.c  HTCache.h  HTChannl.c  HTChannl.h  HTChunk.c  HTChunk.h  HTConLen.c  HTConLen.h  HTCookie.h  HTDNS.c  HTDNS.h  HTDemux.c  (+226 more)
source.development/TeX/libs/md5/: md5.c  md5.h  md5main.c
source.development/TeX/libs/ncurses/: INSTALL  Makefile.in  Makefile.os2  NEWS  README  README.emx  TO-DO  aclocal.m4  announce.html.in  configure.in  dist.mk  mk-0th.awk  mk-1st.awk  mk-2nd.awk  tar-copy.sh
source.development/TeX/libs/regex/: win32.mak
source.development/TeX/libs/t1lib/: configure
source.development/TeX/libs/type1/: configure  fontstruct.h
source.development/TeX/libs/unzip/: crc32.c  crctab.c
source.development/TeX/libs/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
source.development/TeX/mswin32/: build.bat  build.pl  configure.pl  fix-eol.bat  sync.pl
source.development/TeX/texk/: dir  mkinstalldirs
source.development/TeX/texk/bibtex8/: 00readme.txt  HISTORY  bibtex-1.c  bibtex-2.c  bibtex-3.c  bibtex-4.c  bibtex.c  (+14 more)
source.development/TeX/texk/dvipdfmx/: BUGS  ChangeLog  FONTMAP  Makefile.am  Makefile.in  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  index.html  mkinstalldirs  win32.mak
source.development/TeX/texk/dvipdfmx/crypto/: win32.mak
source.development/TeX/texk/dvipdfmx/data/: win32.mak
source.development/TeX/texk/dvipdfmx/data/config/: cid-x.map  dvipdfmx.cfg
source.development/TeX/texk/dvipdfmx/src/: Makefile.am  Makefile.in  cff.c  cff.h  cff_dict.c  cff_dict.h  cff_limits.h  cff_stdstr.h  cff_types.h  cid.c  cid.h  cid_basefont.h  cidbase.c  cidbase.h  cidtype0.c  cidtype0.h  cidtype2.c  cidtype2.h  cmap.c  cmap.h  colors.h  colorsp.c  colorsp.h  cs_type2.c  cs_type2.h  depend.mak  dvi.c  dvi.h  dvicodes.h  dvipdfmx.c  encodings.c  encodings.h  epdf.c  epdf.h  error.h  fontmap.c  fontmap.h  htex.c  htex.h  jpeg.c  (+68 more)
source.development/TeX/utils/: win32.mak
(+1202 files in other folders)
