DIST_COMMON = Makefile.in
EXTRA_DIST =
bin_PROGRAMS = dvipdfmx
bin_SCRIPTS =
dvipdfmx_SOURCES = cff.c cff_dict.c cid.c cidbase.c cidtype0.c cidtype2.c \
cmap.c colorsp.c cs_type2.c dvi.c dvipdfmx.c encodings.c epdf.c \
fontmap.c htex.c jpeg.c mem.c mfileio.c mpost.c numbers.c \
pdfdev.c pdfdoc.c pdfencrypt.c pdfobj.c pdfparse.c pdfspecial.c pkfont.c \
pngimage.c ps_parse.c psimage.c psspecial.c sfnt.c subfont.c \
t1crypt.c tfm.c thumbnail.c tpic.c tt_aux.c tt_build.c tt_cmap.c \
tt_gsub.c tt_table.c ttf.c type0.c type1.c vf.c \
cff.h cff_dict.h cff_limits.h cff_stdstr.h cff_types.h \
cid.h cid_basefont.h cidbase.h cidtype0.h cidtype2.h cmap.h \
colors.h colorsp.h cs_type2.h dvi.h dvicodes.h \
encodings.h epdf.h error.h fontmap.h htex.h jpeg.h macglyphs.h \
mem.h mfileio.h mpost.h numbers.h pdfdev.h pdfdoc.h pdfencrypt.h pdflimits.h \
pdfobj.h pdfparse.h pdfspecial.h pkfont.h pngimage.h ps_parse.h \
psimage.h psspecial.h sfnt.h standardenc.h subfont.h system.h \
t1crypt.h tfm.h thumbnail.h tpic.h tt_aux.h tt_build.h tt_cmap.h \
tt_gsub.h tt_table.h ttf.h twiddle.h type0.h type1.h vf.h winansi.h
