#
# $Id: Makefile.am,v 1.1 2004/01/08 13:42:10 rahtz Exp $
#

AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST = README curlgtk.c sepheaders.c simple.c postit2.c \
	     win32sockets.c persistant.c ftpget.c Makefile.example \
	     multithread.c getinmemory.c ftpupload.c httpput.c \
	     simplessl.c ftpgetresp.c http-post.c

all:
	@echo "done"
